# deeplit-analyzer

./: .env.example  .gitignore  LICENSE  README.md  env.example  install_deps.py  pyproject.toml  requirements.txt  simple_app.py  start_all.py  start_backend.py  start_frontend.py  start_safe_frontend.py  test_summarizer.py  test_system.py
backend/: 0.0.18  requirements.txt
backend/app/: main.py
backend/app/api/: documents.py  qa.py  summaries.py
backend/app/core/: config.py
backend/app/models/: conversation.py  document.py  knowledge.py  qa.py
backend/app/services/extractor/: __init__.py  knowledge_extractor.py
backend/app/services/parser/: __init__.py  document_parser.py
backend/app/services/qa/: __init__.py  qa_service.py
backend/app/services/search/: __init__.py  ai_search_service.py
backend/app/services/storage/: __init__.py  conversation_storage.py  document_storage.py
backend/app/services/summarizer/: __init__.py  summarizer_service.py
data/processed/: 4a631e53-b4b6-4fae-9919-5ee9b26e470d.json  4e4d33a0-6296-405a-a679-5e97d7be8b35.json  4e718692-ba26-459b-9ff5-d61b8d684602.json
data/uploads/: 4a631e53-b4b6-4fae-9919-5ee9b26e470d.docx  4e4d33a0-6296-405a-a679-5e97d7be8b35.docx  ad3a5a80-8e46-47f5-a979-1cb61c84c5a3.docx
frontend/: streamlit_app.py
src/deeplit_analyzer/: __init__.py  analyzer.py  cli.py  config.py
tests/: __init__.py  test_analyzer.py  test_config.py
